<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAnagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextAnswer"
        app:layout_constraintEnd_toEndOf="@+id/editTextAnswer"
        app:layout_constraintStart_toStartOf="@+id/editTextAnswer"
        tools:text="Anagram" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_answer"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/editTextAnswer"
        app:layout_constraintStart_toStartOf="@+id/editTextAnswer"
        app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />
</androidx.constraintlayout.widget.ConstraintLayout>