<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_scanner_black_24"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_generator"
        android:icon="@drawable/ic_generator_black_24"
        android:title="@string/title_generator" />

</menu>