<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/layout_paddingTop"
    tools:context=".ui.generator.GeneratorFragment">

    <!--Generated barcode layout-->
    <FrameLayout
        android:id="@+id/frameGeneratedBarcode"
        android:layout_width="@dimen/frame_layout_width"
        android:layout_height="@dimen/frame_layout_height"
        android:layout_marginTop="@dimen/frame_layout_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Generated barcode-->
        <ImageView
            android:id="@+id/imageViewGeneratedBarcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary_500_A45"
            android:contentDescription="@string/description_generated_barcode" />
    </FrameLayout>

    <!--Text input for generating barcode-->
    <EditText
        android:id="@+id/editTextGenerateBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_layout_marginTop"
        android:autofillHints="false"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/hint_enter_text_to_generate_barcode"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="@color/semi_transparent_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/textSize_normal"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameGeneratedBarcode"
        tools:ignore="LabelFor" />

    <!--Button for generating barcode-->
    <Button
        android:id="@+id/buttonGenerateBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/buttonGenerateBarcode_layout_marginStart"
        android:layout_marginEnd="@dimen/buttonGenerateBarcode_layout_marginEnd"
        android:layout_marginBottom="@dimen/buttonGenerateBarcode_layout_marginBottom"
        android:text="@string/button_generate_barcode"
        android:textSize="@dimen/textSize_normal"
        app:cornerRadius="@dimen/buttonGenerateBarcode_cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Button for saving the barcode-->
    <Button
        android:id="@+id/buttonSaveGenerateBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttonSaveGenerateBarcode_layout_marginTop"
        android:text="@string/button_save_generated_barcode"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/frameGeneratedBarcode"
        app:layout_constraintStart_toStartOf="@+id/frameGeneratedBarcode"
        app:layout_constraintTop_toBottomOf="@+id/editTextGenerateBarcode"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>